Replace `Collectors.toList()` with `toList()` for cleaner and more modern stream operations